--- a/index_2.html
+++ b/index_2.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="col">
-        <img src="http://i63.tinypic.com/2i1czlf.jpg">
+        <img src="https://github.com/67656F/web_data/blob/main/hardwareT.png">
         <h2>Hardware</h2>
         <h3>Embedded Systems</h3>
         <p> Wireless Communications, GPS, PLC, CAN </p>
@@ -47,7 +47,7 @@
       </div>
 
       <div class="col">
-        <img src="http://i66.tinypic.com/2vxitdf.jpg">
+        <img src="https://github.com/67656F/web_data/blob/main/brainT.png">
         <h2>Skills</h2>
         <h3>Teamwork</h3>
         <p>Self-Starter, Clear Communicator, Efficent Problem Solver </p>
