--- a/index_2.html
+++ b/index_2.html
@@ -30,7 +30,7 @@
     <div class="container">
 
       <div class="col">
-        <img src="https://github.com/67656F/web_data/blob/main/softwareT.png">
+        <img src="https://raw.githubusercontent.com/67656F/web_data/main/softwareT.png">
         <h2>Software</h2>
         <h3>C++, Python, Java, MATLAB</h3> 
         <p> JavaScript,JQuery, AJAX, XML, MySQL, PHP, HTML, CSS </p>
