--- a/index_2.html
+++ b/index_2.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="col">
-        <img src="https://github.com/67656F/web_data/blob/main/hardwareT.png">
+        <img src="https://github.com/67656F/web_data/blob/main/hardwareT.png?raw=true">
         <h2>Hardware</h2>
         <h3>Embedded Systems</h3>
         <p> Wireless Communications, GPS, PLC, CAN </p>
