--- a/index_2.html
+++ b/index_2.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="col">
-        <img src="https://github.com/67656F/web_data/blob/main/brainT.png">
+        <img src="https://raw.githubusercontent.com/67656F/web_data/main/brainT.png">
         <h2>Skills</h2>
         <h3>Teamwork</h3>
         <p>Self-Starter, Clear Communicator, Efficent Problem Solver </p>
